some md change